--- a/ng-ECommerce/package.json
+++ b/ng-ECommerce/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "angular-svg-icon": "^6.0.0",
+    "bootstrap": "^4.6.2",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "node-sass": "^4.13.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
